--- a/css/style.css
+++ b/css/style.css
@@ -384,13 +384,13 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
 }
 #fh5co-about .fh5co-social-icons li a {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   color: #fff;
   background: #2F3C4F;
   padding: 10px 10px 2px 10px;
@@ -670,19 +670,19 @@ h1, h2, h3, h4, h5, h6, figure {
   box-shadow: none;
 }
 .progress-bar.progress-bar-1 {
-  background-color: #2980b9 !important;
+  background-color: #ff00bf !important;
 }
 .progress-bar.progress-bar-2 {
-  background-color: #c0392b !important;
+  background-color: #ff00bf !important;
 }
 .progress-bar.progress-bar-3 {
-  background-color: #d35400 !important;
+  background-color: #ff00bf !important;
 }
 .progress-bar.progress-bar-4 {
-  background-color: #8e44ad !important;
+  background-color: #ff00bf !important;
 }
 .progress-bar.progress-bar-5 {
-  background-color: #27ae60 !important;
+  background-color: #ff00bf !important;
 }
 
 .chart {
@@ -1103,6 +1103,38 @@ input[type="text"] {
 .btn.btn-md {
   padding: 8px 20px !important;
 }
+
+/* Style untuk tombol download */
+.btn-lg {
+  padding: 10px 20px;
+  background-color: #ff00bf; /* Warna latar belakang tombol */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  display: inline-flex;
+  align-items: center;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+/* Hover effect */
+.btn-lg:hover {
+  background-color: #ff00bf; /* Warna latar belakang saat hover */
+  transform: scale(1.05); /* Membuat tombol sedikit lebih besar saat hover */
+}
+
+/* Style untuk ikon PDF */
+.btn-lg .icon-file-pdf {
+  margin-right: 10px;
+}
+
+/* Menambahkan efek bayangan pada ikon */
+.btn-lg:hover .icon-file-pdf {
+  color: #ff00bf; /* Ubah warna ikon menjadi putih saat hover */
+}
+
+
 .btn.btn-lg {
   padding: 18px 36px !important;
 }
@@ -1117,8 +1149,8 @@ input[type="text"] {
   border: 2px solid #ff00bf;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background: #ff9b1a !important;
-  border-color: #ff9b1a !important;
+  background: #ff00bf !important;
+  border-color: #ff00bf !important;
 }
 .btn-primary.btn-outline {
   background: transparent;
@@ -1169,21 +1201,21 @@ input[type="text"] {
 }
 
 .btn-warning {
-  background: #f0ad4e;
+  background: #ff00bf;
   color: #fff;
-  border: 2px solid #f0ad4e;
+  border: 2px solid #ff00bf;
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active {
-  background: #eea236 !important;
-  border-color: #eea236 !important;
+  background: #ff00bf !important;
+  border-color: #ff00bf !important;
 }
 .btn-warning.btn-outline {
   background: transparent;
-  color: #f0ad4e;
-  border: 2px solid #f0ad4e;
+  color: #ff00bf;
+  border: 2px solid #ff00bf;
 }
 .btn-warning.btn-outline:hover, .btn-warning.btn-outline:focus, .btn-warning.btn-outline:active {
-  background: #f0ad4e;
+  background: #ff00bf;
   color: #fff;
 }
 
